welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: '(' expected but identifier found.
if estSurBiscuit() {Bisc=Bisc+1} 
   ^RunFour:5: error: illegal start of simple expression
	}
        ^